--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "ui-components"]
-	path = ui-components
+[submodule "ui-catalog"]
+	path = ui-catalog
 	url = https://github.com/shubhamwsa-cloud/component-test-app.git
